--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,17 +1,18 @@
-name: Build APK
+name: Android CI
 
 on:
   push:
-    branches: [ main, master ]
-  workflow_dispatch:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -19,23 +20,14 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Set up Android SDK
-      uses: android-actions/setup-android@v3
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Build with Gradle
+      run: ./gradlew build
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
       with:
-        packages: |
-          build-tools;34.0.0
-          platforms;android-34
-          platform-tools
-
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-
-    - name: Build debug APK
-      run: ./gradlew :app:assembleDebug
-
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-debug-apk
-        path: app/build/outputs/apk/debug/*.apk
-
+        name: app-release
+        path: app/build/outputs/apk/debug/app-debug.apk
